fixes contact button on mobile

--- a/src/scss/blocks/help.scss
+++ b/src/scss/blocks/help.scss
@@ -83,6 +83,8 @@
 }
 
 .help__button {
+  position: relative;
+  z-index: 10;
   min-width: 105px;
 
   @media screen and (min-width: 449px) {
